# hekaton-system

./: .gitignore  CITATION.cff  Cargo.toml  README.md
.github/workflows/: cd.yml
circom-compat/src/: lib.rs
cp-groth16/: Cargo.toml  design.txt
cp-groth16/benches/: bench.rs
cp-groth16/src/: committer.rs  constraint_synthesizer.rs  data_structures.rs  generator.rs  lib.rs  parallel.rs  prover.rs  verifier.rs
distributed-prover/: Cargo.toml  LICENSE  README.md
distributed-prover/benches/: microbenchmarks.rs  monolithic.rs
distributed-prover/src/: aggregation.rs  coordinator.rs  eval_tree.rs  kzg.rs  lib.rs  pairing_ops.rs  partitioned_r1cs_circuit.rs  poseidon_util.rs  subcircuit_circuit.rs  tree_hash_circuit.rs  uint32.rs  util.rs  worker.rs  worker_node.rs.old
distributed-prover/src/portal_manager/: mod.rs  portal_manager.rs  ram_portal_manager.rs  rom_portal_manager.rs
distributed-prover/src/transcript/: mod.rs  ram_transcript.rs  rom_transcript.rs
distributed-prover/src/vkd/: hash.rs  mod.rs  sparse_tree.rs  sparse_tree_constraints.rs  util.rs  vkd.rs  vkd_circuits.rs  vkd_constraints.rs
distributed-prover/src/vm/: memory.rs  mod.rs  vm.rs  vm_circuits.rs  vm_constraints.rs
docs/: subcircuit_api_and_protocol.md
mpi-snark/: Cargo.toml
mpi-snark/examples/: scatter-gather.rs
mpi-snark/src/: coordinator.rs  data_structures.rs  lib.rs  worker.rs
slurm_scripts/: bench_job.slurm  low_mem_task.sh  mytask.sh  run_low_mem.py  run_monolith.py  run_single_bench  setup_bench  setup_task.sh
