[workspace]

members = [
    "cp-groth16",
    "mpi-snark",
    "distributed-prover",
]
resolver = "2"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
panic = 'abort'
debug-assertions = false

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
# incremental = false
debug-assertions = false

[profile.dev]
opt-level = 0
panic = 'abort'

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug-assertions = true
debug = true