[package]
name = "ark-cp-groth16"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.4", default-features = false }
ark-ec = { version = "0.4", default-features = false }
ark-groth16 = { version = "0.4", default-features = false }
ark-poly = { version = "0.4", default-features = false } 
ark-relations = { version = "0.4.0", default-features = false }
ark-serialize = { version = "0.4.0", default-features = false }
ark-std = { version = "0.4.0", default-features = false }
rayon = { version = "1.5.1", default-features = false, optional = true }

[dev-dependencies]
ark-bls12-381 = { version = "0.4", default-features = false }
ark-r1cs-std = { version = "0.4" }

# git = "https://github.com/arkworks-rs/r1cs-std", rev = "4020fbc" }
jemallocator = { version = "0.5" }


[features]
default = ["parallel"]
std = ["ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-relations/std", "ark-std/std", "ark-serialize/std" ]
parallel = ["std", "ark-ff/parallel", "ark-poly/parallel", "ark-ec/parallel", "ark-std/parallel", "ark-serialize/std", "rayon"]
asm = ["ark-ff/asm"]
print-trace = [ "ark-std/print-trace" ]


[[bench]]
name = "groth16-benches"
path = "benches/bench.rs"
harness = false
required-features = ["std"]
