[package]
name = "distributed-prover"
authors = ["Michael Rosenberg <michael@mrosenberg.pub>"]
edition = "2021"
readme = "README.md"
version = "0.1.0"
license = "MIT/Apache-2.0"
keywords = ["cryptography", "crypto", "zero-knowledge", "snark"]
categories = ["cryptography", "no-std"]

[dependencies]
ark-bls12-381 = { version = "0.4", default-features = false, features = ["curve"] }
ark-ff = {version = "0.4", default-features = false }
ark-ec = {version = "0.4", default-features = false }
ark-poly = { version = "0.4.0" }
ark-r1cs-std = { version = "0.4", default-features = false }
ark-relations = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false, features = ["derive"] }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
ark-cp-groth16 = { path = "../cp-groth16", default-features = false }
ark-std = "0.4.0"
ark-crypto-primitives = { version = "0.4", default-features = false, features = ["merkle_tree", "r1cs"] }
rand_chacha = "0.3.1"
rayon = { version = "1.8.0" }
merlin = "3.0.0"
ark-groth16 = "0.4.0"
ark-ip-proofs = { git = "https://www.github.com/arkworks-rs/ripp", branch = "ip-commitment-old" }
ark-inner-products = { git = "https://www.github.com/arkworks-rs/ripp", branch = "ip-commitment-old" }

digest = "0.10"
sha2 = "0.10"
pretty_assertions = "1.2.0"
num-bigint = "0.4.4"
num-traits = { version = "0.2.17", features = [] }
lazy_static = "1.4.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
regex = "1.10.4"
hex = "0.4.3"
#procfs = "0.16.0"

[dev-dependencies]
criterion = "0.5.1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = "0.2"

[features]
default = ["asm", "parallel"]
print-trace = ["ark-std/print-trace"]
std = ["ark-ff/std", "ark-poly/std", "ark-r1cs-std/std", "ark-serialize/std", "ark-relations/std"]
asm = ["ark-ff/asm"]
parallel = ["ark-ff/parallel", "ark-ec/parallel", "ark-poly/parallel", "ark-r1cs-std/parallel", "ark-ip-proofs/parallel", "ark-inner-products/parallel" ]

[[bench]]
name = "microbenchmarks"
harness = false
required-features = ["asm", "parallel"]

[[bench]]
name = "monolithic"
harness = false
required-features = ["asm", "parallel"]