[package]
name = "mpi-snark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false, features = ["asm"] }
ark-ec = { version = "0.4", default-features = false }
ark-bls12-381 = { version = "0.4", default-features = false }
ark-cp-groth16 = { path = "../cp-groth16", default-features = false }
mpi = { version = "0.7.0", features = ["derive"] }
distributed-prover = { path = "../distributed-prover", default-features = false, features = ["asm"] }
rand = "0.8.5"
itertools = "0.11"
crossbeam = {version = "0.8", optional = true }
rayon = { version = "1", optional = true }
mimalloc = { version = "0.1" }
tracking-allocator = { version = "0.4" }
clap = { version = "4.4.6", default-features = false, features = ["derive"] }
rand_chacha = "0.3.1"
mktemp = "0.5.1"
sha2 = "0.10"

ark-ip-proofs = { git = "https://www.github.com/arkworks-rs/ripp", branch = "ip-commitment-old" }
ark-inner-products = { git = "https://www.github.com/arkworks-rs/ripp", branch = "ip-commitment-old" }

[features]
default = []#"print-trace"]
print-trace = ["ark-std/print-trace"]
all_parallel = [
    "ark-ff/parallel", 
    "ark-ec/parallel", 
    "ark-cp-groth16/parallel", 
    "distributed-prover/parallel", 
    "parallel"
]
parallel = ["crossbeam", "rayon"]
